fixed header and content box overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,6 @@ body {
     bottom: 50px;
     right: 50px;
     left: 50px;
-    padding: 20px;
     border: 1px solid white;
 }
 
@@ -106,19 +105,25 @@ nav {
 .content {
     margin: 10px;
     cursor: pointer;
-    width: 19%;
+    width: 100%;
     text-align: left;
     letter-spacing: 3px;
 }
 
+.header {
+    width: 25%;
+    padding-left: 20px;
+    padding-top: 20px;
+}
+
 .wrapper {
-    width: 60%;
+    width: 65%;
     height: 91%;
     position: absolute;
     right: 20px;
     bottom: 20px;
     margin: 30px;
-    /* border: 1px solid white; */
+    /* border: 2px solid white; */
     overflow: scroll;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
@@ -126,15 +131,14 @@ nav {
 
 .wrapper::-webkit-scrollbar {
     display: none;
-  }
+}
 
 .maincontent {
     display: none;
-    padding: 20px;
+    padding: 20px 0px 20px 20px;
     margin: 10px;
     text-align: right;
     font-size: 32px;
-
 }
 
 .theme {
@@ -171,6 +175,19 @@ nav {
     column-gap: 5px;
 }
 
-h2:hover {
+.content:hover h2,
+.content:hover h2 .icon {
     color: #808080;
+}
+
+.content:hover h2 .icon {
+    display: inline-block;
+    transition: transform 0.3s ease;
+    transform: rotate(45deg);
+}
+
+.content h2:not(:hover) .icon {
+    display: inline-block;
+    transition: transform 0.3s ease;
+    transform: rotate(0);
 }
